# cyberpod_sim_ros

./: .gitignore  CMakeLists.txt  README.md  package.xml
URDF/: cyberpod.urdf
bags/: README.md  bag2csv.py
include/cyberpod_sim_ros/: CyberTimer.hpp  SegwayDyn.c.bak  asif_filter.hpp  common.hpp  controller_node.hpp  converter_node.hpp  dynamics.hpp  dynamics_ekf.h  ekf.h  grid_state_space_node.hpp  image_processor_node.hpp  integrator_node.hpp  manual_teleop_node.hpp  safety_filter_node.hpp  sensor_node.hpp
launch/: ecos.launch  main.launch  main_mrcbf.launch  manual_teleop.launch  mrcbf_with_learning.launch  rviz.launch  rvizLearning.launch  rvizObstacle.launch  ryan.launch  sample_state_space.launch  sim_comparison.launch  withLearning.launch
matlab/: SegwayDyn.m  jacobianest.m  levelSet.m
msg/: cmd.msg  filterInfo.msg  input.msg  learning_data.msg  output_data.msg  state.msg  statehardware.msg
notebooks/: Autograd test.ipynb  ECOS Plotting.ipynb  Error-Maps.ipynb  Exploring Experimental Data.ipynb  Find_Lipschitz_Constants.ipynb  Learning Plots.ipynb  Parsing Experimental Data.ipynb  Plotting Example.ipynb  load_model.py  max_feasible_error.py  perception.py  plot_skeleton.ipynb  train_models.py  tuning_script.py
rviz/: config_obstacle.rviz  config_planning.rviz  config_safety_filter.rviz
src/: controller_node.cpp  converter_node.cpp  ekf.cpp  ekf_node.cpp  grid_state_space_node.cpp  image_processor_node.cpp  integrator_node.cpp  keyboard.cpp  manual_teleop_node.cpp  safety_filter_node.cpp  sensor_node.cpp
src/src_python/: ECOS Testing.ipynb  data_logger.py  dynamics.py  ecos_filter.py  ecos_filter_node.py  mrcbf_filter_node.py  mrcbf_wall.py  obstacle.py  perception_node.py  test_ecos.py
vrepScene/: uav_exploration.ttt  uav_exploration_sensor.ttt
vrepScene/UAV_model/: MotorCCW.stl  MotorCW.stl
