<?xml version="1.0"?>

<package format="2">
	<name>cyberpod_sim_ros</name>
	<version>0.1.0</version>
	<description>The cyberpod_sim_ros package</description>
	
	<maintainer email="tgurriet@caltech.edu">tom</maintainer>

	<license>MIT</license>

	<buildtool_depend>catkin</buildtool_depend>
	<depend>roscpp</depend>
	<depend>pcl_conversions</depend>
	<depend>pcl_ros</depend>
	<depend>std_msgs</depend>
	<depend>sensor_msgs</depend>
	<depend>geometry_msgs</depend>
	<depend>visualization_msgs</depend>
	<depend>nav_msgs</depend>
	<depend>message_generation</depend>
	<depend>tf</depend>
	<exec_depend>message_runtime</exec_depend>

	<export>
	</export>
</package>
